--- a/src/index.css
+++ b/src/index.css
@@ -192,7 +192,7 @@ a {
 .device-pin {
   position: absolute;
   right: 15px;
-  top: 8px;
+  top: 4px;
   height: 20px;
   padding: inherit;
 }
